change param names and reverse order of path
